fixed search stats instance card cutting off cycle id

--- a/code/frontend/src/app/features/search-stats/search-stats.component.scss
+++ b/code/frontend/src/app/features/search-stats/search-stats.component.scss
@@ -110,7 +110,6 @@
   &__stats {
     display: flex;
     gap: var(--space-4);
-    overflow: hidden;
   }
 
   &__stat {
